Bug 256169 - Can't cancel adding a new contact
Summary: Can't cancel adding a new contact
Status: CLOSED FIXED
Alias: None
Product: KAddressbook Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-05 18:26 UTC by Andre Heinecke
Modified: 2010-12-13 10:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Heinecke 2010-11-05 18:26:56 UTC
In the contact-editor there is no easy way of canceling the edit/add action without manipulating data.

This affacts Windows CE more then Maemo because there you cant use the maemo Window overview to close the window.
Comment 1 Sergio Martins 2010-11-12 00:18:57 UTC
SVN commit 1195766 by smartins:

Add a cancel button to the contact editor.

BUG: 256169

 M  +1 -0      contacteditorview.cpp  
 M  +1 -0      editorgeneral.cpp  
 M  +2 -0      editorgeneral.h  
 M  +9 -2      editorgeneral.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195766
Comment 2 Ludwig Reiter 2010-12-13 10:50:43 UTC
version:  WindowsCE kontact mobile 4.6. beta2 svn-1204839

In the contact create/edit dialog is now a cancel button.

The layout of the dialog is problematic, but the button works.

Closed.