Add a cancel button to the contact editor.

BUG: 256169

svn path=/trunk/KDE/kdepim/mobile/; revision=1195766