mobile/contacts/contacteditorview.cpp
@@ -240,6 +240,7 @@ void ContactEditorView::setEditorGeneral( EditorGeneral *editor )
       d->mEditorGeneral->setDefaultCollection( d->mCollection );
     }
     connect( d->mEditorGeneral, SIGNAL( saveClicked() ), SLOT( save() ) );
+    connect( d->mEditorGeneral, SIGNAL( cancelClicked() ), SLOT( cancel() ) );
     connect( d->mEditorGeneral, SIGNAL( collectionChanged( Akonadi::Collection ) ),
              SLOT( collectionChanged( Akonadi::Collection ) ) );
     connect( d->mEditorGeneral, SIGNAL( requestLaunchAccountWizard() ),
